<resources>
    <string name="app_name">TimeFighter</string>
    <string name="contentDescriptionSplashScreen">splashScreenIcon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_up">Register</string>
    <string name="login_page">Login</string>
    <string name="register_here">Register here</string>
    <string name="register_page">Register</string>
    <string name="authenticating">Authenticating</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="practice">Practice</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="available">Available</string>
    <string name="single">Single Player</string>
    <string name="multi">Multiplayer</string>
    <string name="single_player_mode_page">Single Player Mode</string>
    <string name="btn_game">Tap Me!!</string>

    <string name="time_left">Time Left: %1$d</string>
    <string name="your_score">Your Score: %1$d</string>
    <string name="end_game_dialog_message">Time\'s up! Your final score: %1$d</string>
    <string name="dialog_ok">Ok</string>
    <string name="tutorial_button">"All you need to do is tapping this button to get scores. This button will move randomly as you hit it. "</string>
    <string name="tutorial_time">You only have 1 minute to gather as many points as possible.</string>
    <string name="tutorial_score">Get the highest score possible and reach highest rank in leaderboard. Try now! Good luck and have fun!</string>
    <string name="practice_mode_page">Practice Mode</string>
</resources>
