<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.wildanpurnomo.timefighter.ui.main.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_single_player_page"
            app:destination="@id/nav_single_player_page" />
        <action
            android:id="@+id/action_nav_home_to_nav_practice_page"
            app:destination="@id/nav_practice_page" />
    </fragment>

    <fragment
        android:id="@+id/nav_single_player_page"
        android:name="com.wildanpurnomo.timefighter.ui.main.home.singlePlayerMode.SinglePlayerModeFragment"
        android:label="@string/single_player_mode_page"
        tools:layout="@layout/fragment_single_player_mode" />

    <fragment
        android:id="@+id/nav_practice_page"
        android:name="com.wildanpurnomo.timefighter.ui.main.home.practiceMode.PracticeModeFragment"
        android:label="@string/practice_mode_page"
        tools:layout="@layout/fragment_practice_mode"/>

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.wildanpurnomo.timefighter.ui.main.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />
</navigation>